--- a/final.css
+++ b/final.css
@@ -14,8 +14,21 @@ svg {
   stroke-width: 1px;
 }
 
-.county-boundary {
+.country {
+  fill: #C0D9AF;
+  stroke: #fff;
+  stroke-width: 1px;
+  stroke-linejoin: round;
+}
+
+.graticule {
   fill: none;
-  stroke: #000;
+  stroke: #aaa;
+  stroke-opacity: .3;
   stroke-width: .5px;
+}
+.graticule.outline {
+  stroke: #999;
+  stroke-opacity: 1;
+  stroke-width: 1.5px;
 }
