--- a/final.css
+++ b/final.css
@@ -15,7 +15,7 @@ svg {
 }
 
 .country {
-  fill: #42a5f5;
+  fill: #757575;
   stroke: #fff;
   stroke-width: 1px;
   stroke-linejoin: round;
@@ -25,7 +25,7 @@ svg {
 
 .point {
   fill: yellow;
-  opacity: .3;  
+  opacity: .3;
 }
 
 .geoDiv{
@@ -44,7 +44,7 @@ svg {
   word-spacing:0pt;
   font-size:20px;
   text-align:left;
-  font-family:helvetica, 
+  font-family:helvetica,
   sans-serif;
   line-height:1;
 }
@@ -181,4 +181,3 @@ h5{
   left:5%;
   font-family:sans-serif;
 }
-
